# OpenLucky

./: .gitignore  CLAUDE.md  LICENSE  README.md  openlucky.service  pyproject.toml
app/: __init__.py  claude_runner.py  command_router.py  config.py  daemon.py  db.py  formatter.py  main.py  models.py  session_manager.py  telegram_bot.py
config/: settings.dev.yaml.example  settings.yaml.example
tests/: test_claude_runner.py  test_command_router.py  test_db.py  test_formatter.py  test_models.py  test_session_manager.py
